test/semantic-errors/13.pas
program p;
begin writeln(2 or 2)end.
